# SLM4IE

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: documentation.yaml
configs/data/: benchmarks.yaml  curate.yaml  download.yaml  extract.yaml  pretrain.yaml  processing.yaml  stopwords_sl.txt  synthetic.yaml  tasks.yaml  tokenization.yaml
configs/tokenizers/: tokenizers.yaml
configs/training/: finetune_ner.yaml  pretrain.yaml
docs/: changelog.md  development.md  index.md  pretrain-corpus-todos.md
docs/assets/stylesheets/: extra.css
docs/blog/: .authors.yml  index.md
docs/datasets/: benchmarks.md  corpus-statistics.md  index.md  pretraining-corpora.md
docs/getting-started/: huggingface-auth.md  index.md  installation.md  project-structure.md
docs/overrides/: main.html
docs/superpowers/plans/: 2026-03-26-dataset-extraction.md  2026-05-12-curate-stages-refactor.md  2026-05-30-incremental-dataset-scoped-curation.md  2026-06-16-pretrain-per-dataset-overrides.md
docs/superpowers/specs/: 2026-05-30-incremental-dataset-scoped-curation-design.md  2026-06-08-spam-adult-filter-design.md
docs/user-guide/: evaluation.md  index.md  slurm.md  tests.md  tokenizers.md  training.md
docs/user-guide/data-pipeline/: curate.md  datatrove.md  download.md  extract.md  index.md  pretrain.md  sentiment.md  spans.md  superglue.md  synthetic.md  tokenizer-eval.md
notebooks/: tokenizer_comparison.py
scripts/: evaluate.py  train.py
scripts/analysis/: __init__.py  diagnose_language_leakage.py
scripts/data/: analyze.py  analyze_dedup_drops.py  curate.py  download.py  extract.py  generate_synthetic.py  process.py  to_datatrove.py  to_pretrain.py  to_sentiment.py  to_spans.py  to_superglue.py  to_tokenization.py  to_tokenizer_eval.py
scripts/tokenizers/: analyze.py  export.py  prepare_sample.py  train.py
slm4ie/: __init__.py
slm4ie/data/: analysis.py  catalog.py  download.py  extract.py  extract_tracking.py  io_utils.py  metadata_lookup.py  metadata_sidecar.py  parallel.py  processing.py  schema.py  sloleks.py  sloleks_relations.py  synthetic.py  task_tracking.py  task_writer.py  tasks.py
slm4ie/data/curate/: __init__.py  convert.py  dedup.py  language.py  manifest.py  overrides.py  pipeline.py  sentinel.py  spam.py  stages.py  stats.py  tracking.py
slm4ie/data/extractors/: __init__.py  coleslaw.py  conllu.py  huggingface.py  json.py  jsonl.py  macocu.py  tei.py  text.py
slm4ie/data/sources/: __init__.py  http.py  huggingface.py
slm4ie/data/spam/: __init__.py  domains.txt
slm4ie/data/spam/en/: adult.txt  spam.txt
slm4ie/data/spam/sl/: adult.txt  spam.txt
slm4ie/data/stopwords/: __init__.py
slm4ie/models/: components.py  registry.py
slm4ie/tokenizers/: analysis.py  base.py  bpe_core.py  corpus.py  hf_export.py  hf_morphpiece.py  metrics.py  morphology.py  registry.py  stats.py  train.py
slm4ie/tokenizers/backends/: __init__.py  _hf_base.py  char_bpe.py  hf_bpe.py  hf_wordpiece.py  morph_bpe.py  morph_piece.py  sp_unigram.py
slm4ie/training/: callbacks.py  trainer.py
slm4ie/utils/: config.py  io.py  mlflow.py
slm4ie/viz/: __init__.py  export.py  palette.py  theme.py
slm4ie/viz/charts/: __init__.py
slurm/: evaluate.sbatch  generate.sbatch  tokenizer_analyze.sbatch  tokenizer_export.sbatch  tokenizer_train.sbatch  train.sbatch
tests/data/: test_analyze_dedup_drops.py  test_catalog.py  test_curate_convert.py  test_curate_dedup.py  test_curate_language.py  test_curate_manifest.py  test_curate_overrides.py  test_curate_pipeline.py  test_curate_runner.py  test_curate_sentinel.py  test_curate_spam.py  test_curate_stages.py  test_curate_stats.py  test_curate_tracking.py  test_download.py  test_extract.py  test_extract_tracking.py  test_io_utils.py  test_processing.py  test_schema.py  test_sloleks.py  test_sloleks_relations.py  test_stopwords.py  test_task_tracking.py  test_tasks_yaml.py  test_to_datatrove.py  test_to_pretrain.py  test_to_pretrain_e2e.py  test_to_sentiment.py  test_to_spans.py  test_to_superglue.py
tests/data/extractors/: test_coleslaw.py  test_conllu.py  test_file_based.py  test_huggingface.py  test_json.py  test_jsonl.py  test_macocu.py  test_metadata_lookup.py  test_metadata_sidecar.py  test_registry.py  test_tei.py
tests/tokenizers/: test_analyze.py  test_backends.py  test_base.py  test_bpe_core.py  test_config.py  test_corpus.py  test_hf_export.py  test_metrics.py  test_mlflow.py  test_morph_backends.py  test_morphology.py  test_morphology_derivational.py  test_prepare_sample.py  test_stats.py  test_train.py
tests/viz/: test_export.py  test_palette.py  test_theme.py
