[project]
name = "slm4ie"
version = "0.1.0"
description = "Small language models for zero-shot information extraction in Slovenian"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "datasets>=3.0.0",
    "zstandard>=0.22",
    "lxml>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
curate = [
    # We intentionally skip datatrove's `processing` and `multilingual`
    # extras. They both transitively pull in fasttext-numpy2-wheel (no
    # Python 3.13 wheel, requires a C++17 compiler to build) via
    # `pyidaungsu-numpy2` (Burmese). For Slovenian we only need spaCy
    # (used by datatrove's `SpaCyTokenizer` for `tok_code="sl"`), so we
    # install datatrove bare and declare the actual runtime deps below.
    "datatrove>=0.6.0",
    "orjson>=3.9",                    # required by JsonlReader / JsonlWriter
    "tokenizers>=0.20",               # imported by datatrove.pipeline.dedup.__init__
    "spacy>=3.8",                    # backs load_word_tokenizer("sl")
    "xxhash>=3.0",                   # HashConfig
    "fasteners>=0.19",                # stage runners
    "ftfy>=6.0",                      # TextNormConfig
    "regex>=2024.0",                  # text normalization
    "nltk>=3.8",                      # fallback sentence splitter
    "pyahocorasick>=2.0",             # filters
    "lingua-language-detector>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "xmlformatter>=0.2.6",
    "jsbeautifier>=1.15.0",
]
